--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "outputDirectory": ".output/public",
-  "regions": ["iad1"],
+  "regions": ["iad1"]
 }
